# 333

./: .gitignore  API.md  CHANGELOG.md  Cargo.toml  Cross.toml  DELIVERY.md  DEPLOYMENT.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  build.sh  clean-build.sh  config.example.json
.github/workflows/: build.yml
github/: RELEASE_TEMPLATE.md
github/workflows/: build.yml
src/: config.rs  db.rs  main.rs  models.rs
src/handlers/: api.rs  auth.rs  mod.rs  pages.rs
src/templates/: mod.rs
static/css/: style.css
static/js/: admin.js  app.js  auth.js  config.js  favorites.js  history.js  player.js  search.js
templates/: about.html  admin.html  config.html  favorites.html  history.html  index.html  login.html  play.html  register.html  search.html
