[package]
name = "katelyatv-rust"
version = "0.1.0"
edition = "2021"
authors = ["蔡大伟"]
description = "KatelyaTV Rust implementation - 自托管影视聚合播放器"
license = "MIT"

[dependencies]
# Web 框架
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
tokio = { version = "1", features = ["full"] }

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 模板引擎
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"

# 认证和安全
argon2 = "0.5"
jwt-simple = "0.12"
rand = "0.8"

# 配置管理
config = "0.14"
dotenvy = "0.15"

# HTTP 客户端
reqwest = { version = "0.11", features = ["json"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 命令行参数解析
clap = { version = "4.4", features = ["derive"] }

# MIME 类型
mime_guess = "2.0"

# Base64 编码
base64 = "0.21"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
